--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "gatsby-plugin-react-helmet": "^3.1.24",
     "gatsby-plugin-sharp": "^2.4.13",
     "gatsby-plugin-typography": "^2.4.1",
+    "gatsby-remark-component": "^1.1.3",
+    "gatsby-remark-custom-image-component": "^1.0.2",
     "gatsby-remark-external-links": "0.0.4",
+    "gatsby-remark-images": "^3.3.8",
     "gatsby-source-filesystem": "^2.1.56",
     "gatsby-transformer-remark": "^2.7.1",
     "gatsby-transformer-sharp": "^2.3.19",
@@ -24,6 +27,7 @@
     "react-helmet": "^5.2.1",
     "react-icons": "^3.9.0",
     "react-typography": "^0.16.19",
+    "rehype-react": "^5.0.1",
     "typography": "^0.16.19",
     "typography-theme-kirkham": "^0.16.19"
   },
