--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "gatsby-remark-custom-image-component": "^1.0.2",
     "gatsby-remark-external-links": "0.0.4",
     "gatsby-remark-images": "^3.3.8",
+    "gatsby-remark-prismjs": "^3.5.4",
     "gatsby-source-filesystem": "^2.1.56",
     "gatsby-transformer-remark": "^2.7.1",
     "gatsby-transformer-sharp": "^2.3.19",
+    "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
